src/argocd/bootstrap-resources/arrs/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arrs
  labels:
    app.kubernetes.io/name: arrs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: arrs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: arrs
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http-sabnzbd
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
            subPath: sabnzbd
          - name: downloads
            mountPath: /downloads
          - name: media
            mountPath: /media
          - name: tmpfs
            mountPath: /tmpfs
      - name: radarr
        image: lscr.io/linuxserver/radarr
        imagePullPolicy: Always
        ports:
          - containerPort: 7878
            name: http-radarr
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
            subPath: radarr
          - name: downloads
            mountPath: /downloads
          - name: media
            mountPath: /media
          - name: tmpfs
            mountPath: /tmpfs
      - name: sonarr
        image: lscr.io/linuxserver/sonarr
        imagePullPolicy: Always
        ports:
          - containerPort: 8989
            name: http-sonarr
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
            subPath: sonarr
          - name: downloads
            mountPath: /downloads
          - name: media
            mountPath: /media
          - name: tmpfs
            mountPath: /tmpfs
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: arrs-config-pvc
      - name: media
        nfs:
          path: /mnt/hdd/media
          server: 10.1.60.6
      - name: downloads
        nfs:
          path: /mnt/hdd/downloads
          server: 10.1.60.6      
      - name: tmpfs
        emptyDir:
          medium: Memory
