src/argocd/bootstrap-resources/arrs/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: arrs
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.ryanb.tv`)
      kind: Rule
      services:
        - name: arrs
          kind: Service
          port: sonarr
    - match: Host(`radarr.ryanb.tv`)
      kind: Rule
      services:
        - name: arrs
          kind: Service
          port: radarr
    - match: Host(`nzb.ryanb.tv`)
      kind: Rule
      services:
        - name: arrs
          kind: Service
          port: sabnzbd
    - match: Host(`prowlarr.ryanb.tv`)
      kind: Rule
      services:
        - name: arrs
          kind: Service
          port: prowlarr
  tls: {}
